nav and contaner init

--- a/index.html
+++ b/index.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment1</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="inter-navLogo">
+                Logo
+            </div>
+            <button class="bg-button nav-button">
+                Sing Up
+            </button>
+        </nav>
+        <div class="header-section">
+            <p class="raleway-heading heading-title">Cool Dark UI Template for Web-flow Agencies!</p>
+            <button class="bg-button raleway-heading heading-button ">Stay Focused</button>
+        </div>
+    </header>
+
+    <section class="content-section">
+        <div class="content-box">
+            <h2 class=" content-box-heading">See It in Action</h2>
+            <p class="content-box-text">Explore the live preview and imagine your brand in this bold new look.</p>
+            <button class="bg-button content-box-button ">Launch Live Preview</button>
+        </div>
+        <div>
+            <img src="./Assets/wc-mini.png" alt="">
+        </div>
 </body>
 </html>
