comment section added

--- a/index.html
+++ b/index.html
@@ -67,5 +67,62 @@
             </div>
 
     </section>
+    <div>
+        <h2 class="comment-heading">What Our Users Say</h2>
+      </div>
+    <section class="comment-section">
+      <div class="comment-container">
+        <div class="comment-box">
+            <div>
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+            </div>
+            <div class="comment-subHeading">Loved by Designers</div>
+            <div class="comment-subtext">This template instantly leveled up our presence.”</div>
+            <div class="comment-name">
+                <img src="./Assets/avatar.png" alt="">
+                <div class="comment">
+                    <span class="comment">John Doe</span>
+                    <span class="date">Date</span>
+                </div>
+            </div>
+        </div>
+        <div class="comment-box">
+            <div><img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt=""></div>
+            <div class="comment-subHeading">Loved by Designers</div>
+            <div class="comment-subtext">This template instantly leveled up our presence.”</div>
+            <div class="comment-name"><img src="./Assets/avatar.png" alt="">
+                <div class="comment">
+                 <span class="comment">John Doe</span>
+                    <span class="date">Date</span>
+                </div>
+            </div>
+    </div>
+        <div class="comment-box">
+            <div><img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt=""></div>
+            <div class="comment-subHeading">Loved by Designers</div>
+            <div class="comment-subtext">This template instantly leveled up our presence.”</div>
+            <div class="comment-name"><img src="./Assets/avatar.png" alt="">
+                <div>
+                    <span class="comment">John Doe</span>
+                    <span class="date">Date</span>
+                </div>
+                
+            </div>
+        </div>
+      </div>
+      
+    </section>
   </body>
 </html>
