--- a/index.html
+++ b/index.html
@@ -125,6 +125,21 @@
       
     </section>
 
+      <section class="content-section2">
+      <div class="content-box2">
+        <h2 class="content-box-heading">Ready to focus better</h2>
+        <p class="content-box-text2">
+          This template instantly leveled up our presence.” – Studio Vertex
+        </p>
+        <button class="bg-button content-box-button2">
+          Ger Started Free
+        </button>
+      </div>
+      <div>
+        <img class="content-box-img2" src="./Assets/wc-big.png" alt="" />
+      </div>
+    </section>
+
     <section class="form-section">
         <div class="form-heading" >
             <div>
@@ -138,7 +153,7 @@
             </div>
             <div>
                 <label for="email">Name</label>
-                <input type="text" placeholder="full name" class="form-input" />
+                <input type="text" placeholder="Full name" class="form-input" />
             </div>
             <div>
                  <label for="message">Message</label>
@@ -154,6 +169,9 @@
         </div>
         </div>
     </section>
+
+    
+
     <section class="footer-section">
         <div class="footer">
             <div class="footer-logo">Logo</div>
