--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
                 <img src="./Assets/icon-star.png" alt="">
                 <img src="./Assets/icon-star.png" alt="">
             </div>
-            <div class="comment-subHeading">Loved by Designers</div>
-            <div class="comment-subtext">This template instantly leveled up our presence.”</div>
+            <div class="comment-subHeading">Alibaba</div>
+            <div class="comment-subtext">I recommend! good quality product! The seller is </div>
             <div class="comment-name">
-                <img src="./Assets/avatar.png" alt="">
+                <img class="comment-name-img" src="./Assets/avatar.png" alt="">
                 <div class="comment">
-                    <span class="comment">John Doe</span>
-                    <span class="date">Date</span>
+                    <span class="comment">Siam</span>
+                    <span class="date">20/5/20</span>
                 </div>
             </div>
         </div>
@@ -96,12 +96,12 @@
                 <img src="./Assets/icon-star.png" alt="">
                 <img src="./Assets/icon-star.png" alt="">
                 <img src="./Assets/icon-star.png" alt=""></div>
-            <div class="comment-subHeading">Loved by Designers</div>
-            <div class="comment-subtext">This template instantly leveled up our presence.”</div>
-            <div class="comment-name"><img src="./Assets/avatar.png" alt="">
+            <div class="comment-subHeading">Daraz</div>
+            <div class="comment-subtext">Easy to communicate & understand”</div>
+            <div class="comment-name"><img class="comment-name-img" src="./Assets/avatar.png" alt="">
                 <div class="comment">
-                 <span class="comment">John Doe</span>
-                    <span class="date">Date</span>
+                 <span class="comment">Abide</span>
+                    <span class="date">13/7/2021</span>
                 </div>
             </div>
     </div>
@@ -111,12 +111,12 @@
                 <img src="./Assets/icon-star.png" alt="">
                 <img src="./Assets/icon-star.png" alt="">
                 <img src="./Assets/icon-star.png" alt=""></div>
-            <div class="comment-subHeading">Loved by Designers</div>
-            <div class="comment-subtext">This template instantly leveled up our presence.”</div>
-            <div class="comment-name"><img src="./Assets/avatar.png" alt="">
+            <div class="comment-subHeading">Daraz</div>
+            <div class="comment-subtext">very good product....</div>
+            <div class="comment-name"><img class="comment-name-img" src="./Assets/avatar.png" alt="">
                 <div>
-                    <span class="comment">John Doe</span>
-                    <span class="date">Date</span>
+                    <span class="comment">Jhoker vai</span>
+                    <span class="date">2/3/2023</span>
                 </div>
                 
             </div>
